--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "stripe": "^17.3.0"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
   }
