Cloudinary Setup Completed

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,8 @@ MONGODB_PASSWORD=VvfbecDj4QpffJc6
 MONGODB_USERNAME=parvezmahmudaa100
 MONGODB_URI=mongodb+srv://parvezmahmudaa100:VvfbecDj4QpffJc6@cluster0.mcfe0.mongodb.net/
 FRONTEND_URL=http://localhost:5173/
+
+# cloudinary set up
+CLOUDINARY_NAME=dhwofvl1e
+CLOUDINARY_API_KEY=146448988629326
+CLOUDINARY_API_SECRET=CuihZglQCcz7_sfJJ9XSiKS7TLg
