Mailtrap setup completd

--- a/Backend/.env
+++ b/Backend/.env
@@ -8,3 +8,6 @@ FRONTEND_URL=http://localhost:5173/
 CLOUDINARY_NAME=dhwofvl1e
 CLOUDINARY_API_KEY=146448988629326
 CLOUDINARY_API_SECRET=CuihZglQCcz7_sfJJ9XSiKS7TLg
+
+# mailtrap
+MAILTRAP_API_TOKEN=36c856052a196c7100ba8f82e9983202
