--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.7",
